update for typenames