@@ -234,44 +234,25 @@ public class EventGridSystemEventsCustomization extends Customization {
 
     public void customizeAcsMessageEventDataAndInheritingClasses(LibraryCustomization customization, Logger logger) {
         PackageCustomization packageModels = customization.getPackage("com.azure.messaging.eventgrid.systemevents");
-        ClassCustomization classCustomization = packageModels.getClass("AcsMessageEventData");
-        classCustomization.addImports("com.azure.core.models.ResponseError");
-        classCustomization.customizeAst(comp -> {
-            ClassOrInterfaceDeclaration clazz = comp.getClassByName("AcsMessageEventData").get();
-            // Fix up the getError method to always return a ResponseError.
-            clazz.getMethodsByName("getError").forEach(m -> {
-                m.setType("ResponseError")
-                    .setBody(parseBlock("{ return new ResponseError(this.error.getChannelCode(), this.error.getChannelMessage()); }"))
-                    .setJavadocComment(new Javadoc(new JavadocDescription(List.of(new JavadocSnippet("Get the error property: The channel error code and message."))))
-                        .addBlockTag("return", "the error value."));
+        List<String> classNames = Arrays.asList(
+            "AcsMessageEventData",
+            "AcsMessageDeliveryStatusUpdatedEventData",
+            "AcsMessageReceivedEventData"
+        );
+        for (String className : classNames) {
+            ClassCustomization classCustomization = packageModels.getClass(className);
+            classCustomization.addImports("com.azure.core.models.ResponseError");
+            classCustomization.customizeAst(comp -> {
+                ClassOrInterfaceDeclaration clazz = comp.getClassByName(className).get();
+                // Fix up the getError method to always return a ResponseError.
+                clazz.getMethodsByName("getError").forEach(m -> {
+                    m.setType("ResponseError")
+                        .setBody(parseBlock("{ return new ResponseError(this.error.getChannelCode(), this.error.getChannelMessage()); }"))
+                        .setJavadocComment(new Javadoc(new JavadocDescription(List.of(new JavadocSnippet("Get the error property: The channel error code and message."))))
+                            .addBlockTag("return", "the error value."));
+                });
             });
-        });
-
-        ClassCustomization deliveryStatusclassCustomization = packageModels.getClass("AcsMessageDeliveryStatusUpdatedEventData");
-        deliveryStatusclassCustomization.addImports("com.azure.core.models.ResponseError");
-        deliveryStatusclassCustomization.customizeAst(comp -> {
-            ClassOrInterfaceDeclaration clazz = comp.getClassByName("AcsMessageDeliveryStatusUpdatedEventData").get();
-            // Fix up the getError method to always return a ResponseError.
-            clazz.getMethodsByName("getError").forEach(m -> {
-                m.setType("ResponseError")
-                    .setBody(parseBlock("{ return new ResponseError(this.error.getChannelCode(), this.error.getChannelMessage()); }"))
-                    .setJavadocComment(new Javadoc(new JavadocDescription(List.of(new JavadocSnippet("Get the error property: The channel error code and message."))))
-                        .addBlockTag("return", "the error value."));
-            });
-        });
-
-        ClassCustomization messageReceivedclassCustomization = packageModels.getClass("AcsMessageReceivedEventData");
-        messageReceivedclassCustomization.addImports("com.azure.core.models.ResponseError");
-        messageReceivedclassCustomization.customizeAst(comp -> {
-            ClassOrInterfaceDeclaration clazz = comp.getClassByName("AcsMessageReceivedEventData").get();
-            // Fix up the getError method to always return a ResponseError.
-            clazz.getMethodsByName("getError").forEach(m -> {
-                m.setType("ResponseError")
-                    .setBody(parseBlock("{ return new ResponseError(this.error.getChannelCode(), this.error.getChannelMessage()); }"))
-                    .setJavadocComment(new Javadoc(new JavadocDescription(List.of(new JavadocSnippet("Get the error property: The channel error code and message."))))
-                        .addBlockTag("return", "the error value."));
-            });
-        });
+        }
     }
 
     public static String getConstantName(String name) {
